<resources>
    <string name="app_name">DorProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>

    <string name="price">Price:</string>
    <string name="_0">0</string>
    <string name="enter_coupon_code">Enter coupon code:</string>
    <string name="code">Code</string>
    <string name="payment">Payment</string>
    <string name="adidasitem">AdidasItem</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password1">Password...</string>

    <string name="back">Back</string>
    <string name="converseitem">ConverseItem</string>
    <string name="enter_your_email">Enter your email..</string>
    <string name="fashion_sale">Fashion Sale</string>
    <string name="minimal_mens_style">Minimal Mens Style</string>
    <string name="nike">Nike</string>
    <string name="adidas">Adidas</string>
    <string name="converse">Converse</string>
    <string name="name_product">Name Product</string>
    <string name="price_product">Price Product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description">description</string>
    <string name="size">Size:</string>
    <string name="dor_rubin">Dor Rubin</string>
    <string name="_0526694273">0526694273</string>
    <string name="dorrubin998_gmail_com">dorrubin998@gmail.com</string>
    <string name="size_spinner">size</string>
</resources>