<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/header"
        android:orientation="vertical"
        android:background="@drawable/header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="45sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/email"
            android:ems="10"
            android:hint="Email..."
            android:minHeight="48dp"
            tools:ignore="HardcodedText"
            android:inputType="textEmailAddress" />

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/password1"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color2"
            android:text="@string/register" />
        <Button
            android:id="@+id/btn_back_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#87ACDA"
            android:text="@string/back" />



        <ProgressBar
            android:layout_marginTop="40dp"
            android:id="@+id/progress_register"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            />
    </LinearLayout>



</RelativeLayout>